# calc-tee-pcrs-rtmr

./: Cargo.toml  README.md  flake.nix
.github/workflows/: nix.yml
src/: build_info.rs  main.rs  pcr.rs
