[package]
name = "calc-tee-pcrs-rtmr"
version = "1.0.0"
description = "Precompute PCR and RTMR registers"
edition = "2024"
authors = ["Marius Knaust <mknaust@amazon.com>", "Harald Hoyer <harald@hoyer.xyz>"]
# repository = "https://github.com/aws/NitroTPM-Tools"
repository = "https://github.com/haraldh/calc-tee-pcrs-rtmr"
readme = "README.md"
license-file = "../LICENSE"
keywords = ["tpm", "pcr", "tdx", "rtmr"]

[dependencies]
anyhow = "1.0"
authenticode = { version = "0.5", features = ["object", "std"] }
aws-lc-rs = "1.12"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10"
env_logger = "0.11"
gpt = "4.1.0"
log = "0.4"
object = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.16"
x509-cert = "0.2"
